fix copyright alignment, fix footer menu item padding

--- a/src/apps/Bradley/Footer/Copyright/Copyright.scss
+++ b/src/apps/Bradley/Footer/Copyright/Copyright.scss
@@ -51,13 +51,15 @@
   // right column
   &.colRight {
     padding-bottom: 0;
-    @include respond-to(tablet) {
-      text-align: right;
-    }
 
     .menuItem {
       float: none;
       line-height: 1.5;
+      text-align: left;
+
+      @include respond-to(tablet) {
+        text-align: right;
+      }
     }
   }
 }
