--- a/src/apps/Bradley/Footer/Footer.scss
+++ b/src/apps/Bradley/Footer/Footer.scss
@@ -74,17 +74,17 @@ $menuItemFontSize: 10px;
 }
 
 .menuItem {
-  padding: ($menuItemsGap / 2) 0;
+  padding: ($menuItemsGap / 2) 0 (($menuItemsGap / 2) - 2) 0;
   color: white;
   font-family: $CentraleSansPro;
   font-size: $menuItemFontSize;
   font-weight: bold;
-  line-height: 1.3;
+  line-height: normal;
   letter-spacing: 0.2px;
   text-transform: uppercase;
 
   @include respond-to(tablet) {
-    padding: ($menuItemsGapTablet / 2) 0;
+    padding: ($menuItemsGapTablet / 2) 0 (($menuItemsGapTablet / 2) - 2) 0;
     padding-right: 30px;
   }
 
